Bug 332110: Attaching out-of-locale Unicode-named file fails: won't send. r=mscott, sr=bienvenu